Update file nekk

--- a/Test.html
+++ b/Test.html
@@ -7,7 +7,6 @@
 <body>
     <H1>Xin chao ban nekkk hihi</H1>
     <p>How are you?</p>
-    <h3>Yes. I speak English and Vietnamese</h3>
-    <h5>No. I don't live in Japan</h5>
+    <div>Yes. I speak English and Japanese. ohh</div>
 </body>
 </html>
