--- a/Test.html
+++ b/Test.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <H1>Xin chao ban nekkk hihi</H1>
+    <ul>
+        <li id = "lakak">xin chao</li>
+        <li>toi la ai day</li>
+        <li>ban la ai </li>
+        <li>toi la nguyen van bien</li>
+        <li>How are you?</li>
+    </ul>
     <p>How are you?</p>
     <div>Yes. I speak English and Japanese. ohh</div>
 </body>
