--- a/New.html
+++ b/New.html
@@ -10,6 +10,8 @@
         <li>kamirawua</li>
         <li>hatachi</li>
         <li>miromitshi</li>
+        <li>Kimochi</li>
+        <li>NguyenBN</li>
     </ul>
 </body>
 </html>
